fixed overlap issue

--- a/css/pages.css
+++ b/css/pages.css
@@ -11,7 +11,7 @@ iframe {
     height: 625px;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
      iframe {
         width: 700px;
         height: 394px; 
@@ -22,7 +22,15 @@ iframe {
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
+     iframe {
+        width: 500px;
+        height: 269px; 
+    }
+    
+}
+
+@media only screen and (max-width: 550px) {
      iframe {
         width: 300px;
         height: 169px; 
